[gd_scene load_steps=2 format=3 uid="uid://creatureslot"]

[ext_resource type="Script" path="res://scripts/ui/creature_slot.gd" id="1_creature"]

[node name="CreatureSlot" type="Control"]
custom_minimum_size = Vector2(140, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 120.0
pivot_offset = Vector2(70, 60)
script = ExtResource("1_creature")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.3, 1)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.3, 0.2, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Creature Name"
horizontal_alignment = 1

[node name="AttackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 1

[node name="AttackIcon" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 65.0
offset_right = 50.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "ATK"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 55.0
offset_top = 45.0
offset_right = -10.0
offset_bottom = 65.0
grow_horizontal = 2
max_value = 10.0
value = 7.0
show_percentage = false

[node name="HPLabel" type="Label" parent="HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "7/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -30.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
